==> alarmko/STM32F103-LCD-SPI/LCD_SPI_F103/Core/Src/TouchPanel.c <==
#include "TouchPanel.h"
#include "ILI9488_SPI.h"
#define THRESHOLD 		2
#define TP_hspi 		hspi2

static void WR_CMD (uint8_t cmd)
{
	HAL_SPI_Transmit(&TP_hspi, &cmd, 1, 1000);
}

static uint16_t RD_AD(void)
{
	uint8_t buf[2] = {0, 0 };
	int value;

	HAL_SPI_Receive(&TP_hspi, buf, 2, 1000);
	value = (((uint16_t)buf[0] * 256 +  buf[1]) >> 3) & 0x0FFF;

	return value;
}
